--- a/my-project-website/src/index.html
+++ b/my-project-website/src/index.html
@@ -8,6 +8,9 @@
   <link href="favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
+<script src="https://accounts.google.com/gsi/client" async></script>
 <app-root></app-root>
+
 </body>
+
 </html>
