--- a/my-project-website/src/index.html
+++ b/my-project-website/src/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+  <base href="/">
+
   <meta charset="utf-8">
   <title>MyProject</title>
   <base href="/">
