--- a/my-project-website/src/index.html
+++ b/my-project-website/src/index.html
@@ -9,6 +9,8 @@
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <!-- Ajouter le script Google ici -->
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
 <script src="https://accounts.google.com/gsi/client" async></script>
