--- a/my-project-website/src/index.html
+++ b/my-project-website/src/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <base href="/">
 
   <meta charset="utf-8">
-  <title>MyProject</title>
+  <title>GeoMeteo</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
