Erreur en W3C validator balise base

--- a/my-project-website/src/index.html
+++ b/my-project-website/src/index.html
@@ -2,11 +2,10 @@
 <html lang="fr">
 
 <head>
-  <base href="/">
+  <base href="/"> <!-- Gardez uniquement une seule balise <base href="/"> -->
 
   <meta charset="utf-8">
   <title>GeoMeteo</title>
-  <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
   <!-- Ajouter le script Google ici -->
